# Parallel-Programming

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Assignment1/: CMakeLists.txt
Assignment10/: CMakeLists.txt
Assignment10/real/: real.c
Assignment11/: CMakeLists.txt
Assignment11/Task1/: ScalarArchitecture.c
Assignment11/Task2/: Transformation.c
Assignment12/: CMakeLists.txt
Assignment12/Task1/: Vectorization.c
Assignment12/Task3/: VectorizationCS.c
Assignment2/: CMakeLists.txt
Assignment2/Task2/: Cache.cpp  CacheMiss.cpp  Hadamard.c
Assignment2/Task3/: PiParallel.c  PiSerial.c
Assignment3/: CMakeLists.txt  start.sh
Assignment4/: CMakeLists.txt
Assignment4/Task1/: Pthread.c
Assignment4/Task2/: ex2_b.c  start.sh
Assignment4/Task3/: Mergesort.cpp
Assignment5/: CMakeLists.txt  time.sh
Assignment5/Task1/: task1.c  task1close.c  task1spread.c
Assignment5/Task2/: flush.c
Assignment5/Task3/: Mergesort.cpp  Mergesort.h  main.cpp
Assignment6/: CMakeLists.txt
Assignment6/Task2/: HeatStencil.c  heat_stencil_2D.c
Assignment7/: CMakeLists.txt
Assignment7/Task1/: Seriell.c
Assignment7/Task2/: NQueensParallel.c  NQueensSeq.c
Assignment8/: CMakeLists.txt
Assignment9/Task1/: Dependency.c
Common/: README.md  time.sh
