# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
cmake_minimum_required (VERSION 3.8)

project ("ParallelProgramming")

# Include sub-projects.
add_subdirectory ("Assignment1")
add_subdirectory ("Assignment2")
add_subdirectory ("Assignment3")
add_subdirectory ("Assignment4")
add_subdirectory ("Assignment5")
add_subdirectory ("Assignment6")
add_subdirectory ("Assignment7")